--- a/pricing/styles.css
+++ b/pricing/styles.css
@@ -6,7 +6,7 @@
     /* border: 1px solid black; */
 }
 
-main{
+#pricing{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 2fr; 
@@ -15,7 +15,7 @@ main{
     padding: 3% 15% 5%;
 }
 
-nav{
+#pricing nav{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -23,12 +23,12 @@ nav{
     text-align: center;
 }
 
-nav h1 {
+#pricing nav h1 {
     margin-bottom: 4%;
     font-weight: 500;
 }
 
-.card {
+#pricing .card {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,29 +38,29 @@ nav h1 {
     margin: 0 10%;
 }
 
-.card button {
+#pricing .card button {
     padding: 5% 20%;
     border-radius: 5px;
 }
 
-#circle {
+#pricing #circle {
     background-color: black;
     height: 20%;
     aspect-ratio: 1/1;
     border-radius: 50%;
 }
 
-.card ul {
+#pricing .card ul {
     list-style-type: none;
     padding: 0;
 }
 
-.card li {
+#pricing .card li {
     margin-bottom: 1rem;
     opacity: .4;
 }
 
-.card h1 {
+#pricing .card h1 {
     margin-bottom: 0;
 }
 
