--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 body {
